--- a/FollowCard/src/App.css
+++ b/FollowCard/src/App.css
@@ -1,42 +1,72 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.followCard {
+  display: flex;
+  align-items: center;
+  color: #fff;
+  font-size: .8rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.followCard-header {
+  display: flex;
+  align-items: center;
+  gap: 4px;  
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.followCard-info {
+  display: flex;
+  flex-direction: column;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.followCard-infoUserName {
+  opacity: .6;
 }
 
-.card {
-  padding: 2em;
+.followCard-avatar {
+  width: 48px;
+  height: 48px;
+  border-radius: 1000px;
 }
 
-.read-the-docs {
-  color: #888;
+.followCard-button {
+  margin-left: 16px;
+  border: 0;
+  border-radius: 999px;
+  padding: 6px 16px;
+  font-weight: bold;
+  cursor: pointer;
+  border: 1px solid #000;
+  transition: .3s ease background-color;
+}
+
+.followCard-button:hover {
+  opacity: .8;  
+}
+
+.followCard-text {
+  display: block;
+}
+
+.followCard-button.is-following {
+  border: 1px solid #bbb;
+  background: transparent;
+  color: #fff;
+  width: 140px;
+}
+
+.followCard-button.is-following:hover {
+  background-color: rgb(255, 0, 0, 0.178);
+  color: red;
+  border: 1px solid red;
+  transition: .3s ease all;
+}
+
+.followCard-button.is-following:hover .followCard-text {
+  display: none;
+}
+
+.followCard-button.is-following:hover .followCard-stopFollowing {
+  display: block;
+}
+
+.followCard-stopFollowing {
+  display: none;
 }
